<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SweepFreeq</string>
    <string name="action_settings">Settings</string>
    <string name="pf_sweep_start">Start Frequency</string>
    <string name="pf_sweep_stop">Stop Frequency</string>
    <string name="pf_number_of_steps">Steps         </string>
    <string name="cf_do_sweep">Sweep</string>
    <string name="pf_do_connect">Connect</string>
    <string name="pf_button_usb1">USB</string>
    <string name="pf_bluetooth_button">Bluetooth</string>
    <string name="action_reset">Reset to Defaults</string>
    <string name="action_reset_condensed">Reset</string>
    <string name="action_exit">Exit</string>
    <string name="pf_default_start">1.5</string>
    <string name="pf_default_stop">30.0</string>
    <string name="pf_default_steps">60</string>
    <string name="pf_continuous">Continuous</string>
    <string name="pf_disp_freq">1.25</string>
    <string name="pf_disp_vswr">10:1</string>
	<string name="ma_sweep_running_title">Sweep Running</string>
	<string name="ma_sweep_running_message">"There is a sweep currently running, please wait until it completes before running another sweep"</string>
	<string name="ma_reset_title">Reset</string>
	<string name="ma_reset_message">This will Reset the sweeper to defaults, but its not implemented yet</string>
	<string name="bt_text">Status: -</string>
    <string name="bt_on">Turn On</string>
    <string name="bt_off">Turn Off</string>
    <string name="bt_list">List paired Devices</string>
    <string name="bt_find">Search new Devices / Cancel</string>
    <string name="sca_connect_button_text">Connect</string>
    <string name="sca_send_button_text">Send</string>

    <string name="about_author_text">Joe Culbreth - N4AIK</string>
    <string name="about_version_text">Version: 1.0</string>
    <string name="about_build_date_text">Build Date: May 21, 2015</string>
    <string name="about_copyright_text">Copyright 2015</string>

    <string name="prefcat_defaults_title">Defaults</string>
    
    <string name="pref_device_type">usb</string>
    <string name="pref_default_device_type_title">Startup Device Type</string>
    <string name="pref_default_device_type_summary">Start the program with USB or Bluetooth device</string>
    <string name="pref_start_freq_setting_title">Start Freq</string>
    <string name="pref_start_freq_setting_summary">The Sweep Frequency to start with</string>
    <string name="pref_stop_freq_setting_title">Stop Freq</string>
    <string name="pref_stop_freq_setting_summary">The Sweep Frequency to end with</string>
    <string name="pref_steps_setting_title">Steps</string>
    <string name="pref_steps_setting_summary">The number of sweep samples to run</string>
	
	<string name="prefcat_serial_settings_title">Serial Comm Settings</string>    
    <string name="pref_baud_rate">9600</string>
    <string name="pref_default_baud_rate_title">Baud Rate</string>
    <string name="pref_baud_rate_summary">Baud Rate for Serial Communication</string>
    <string name="pref_data_bits">8</string>
    <string name="pref_default_data_bits_title">Data Bits</string>
    <string name="pref_default_data_bits_summary">Data Bits setting for Serial Communication</string>
    <string name="pref_parity">N</string>
    <string name="pref_default_parity_title">Parity</string>
    <string name="pref_default_parity_summary">Parity setting for Serial Communication</string>
    <string name="pref_stop_bit">1</string>
    <string name="pref_default_stop_bit_title">Stop Bit</string>
    <string name="pref_default_stop_bit_summary">Stop Bit setting for Serial Communication</string>
    <string name="pref_flow_control">None</string>
    <string name="pref_default_flow_control_title">Flow Control</string>
    <string name="pref_default_flow_control_summary">Flow Control setting for Serial Communication</string>

    <string name="prefcat_usb_settings_title">USB Settings</string>
    
    <string name="prefcat_bluetooth_settings_title">Bluetooth Settings</string>
    <string name="pref_bluetoothDevice">No Bluetooth Devices Present</string>
    <string name="pref_default_bluetoothDevice_title">Bluetooth Device</string>
    <string name="pref_default_bluetoothDevice_summary">Choose your Bluetooth Serial Device</string>
   
    
</resources>
